--- a/BSPracaInzynierska/Client/_Imports.razor
+++ b/BSPracaInzynierska/Client/_Imports.razor
@@ -8,7 +8,11 @@
 @using Microsoft.JSInterop
 @using BSPracaInzynierska.Client
 @using BSPracaInzynierska.Client.Services
+@using BSPracaInzynierska.Client.Services.PlaylistService
 @using BSPracaInzynierska.Client.Shared
 @using BSPracaInzynierska.Shared
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Authorization
+@using Blazored.Modal
+@using Blazored.Modal.Services
+@using System.Security.Claims;
