--- a/BSPracaInzynierska/Client/Shared/NavMenu.razor
+++ b/BSPracaInzynierska/Client/Shared/NavMenu.razor
@@ -1,49 +1,67 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="">BSPracaInzynierska</a>
-        <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-    </div>
-</div>
+﻿@inject NavigationManager navigationManager
+@inject HttpClient http
+@inject Blazored.LocalStorage.ILocalStorageService localStorage
 
-<div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
-    <nav class="flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="register" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Register
-            </NavLink>
+
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+        <div class="navbar-header">    
+            <ul class="nav navbar-nav">
+                <li>
+                    <NavLink class="nav-link" href="register">
+                        <a class="navbar-brand">Guess that Melody?</a>
+                    </NavLink>
+                </li>
+                <li>
+                    <NavLink class="nav-link" href="register">
+                        <span class="oi oi-home" aria-hidden="true"></span> Register
+                    </NavLink>
+                </li>
+                <li>
+                    <NavLink class="nav-link" href="login">
+                        <span class="oi oi-home" aria-hidden="true"></span> Login
+                    </NavLink>
+                </li>
+                <li>
+                    <NavLink class="nav-link" href="">
+                        <span class="oi oi-home" aria-hidden="true"></span> Home
+                    </NavLink>
+                </li>
+                <li>
+                    <NavLink class="nav-link" href="counter">
+                        <span class="oi oi-plus" aria-hidden="true"></span> Counter
+                    </NavLink>
+                </li>
+                <li>
+                    <NavLink class="nav-link" href="createPlaylist">
+                        <span class="oi oi-plus" aria-hidden="true"></span> Playlist
+                    </NavLink>
+                </li>
+            </ul>
         </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="login">
-                <span class="oi oi-home" aria-hidden="true"></span> Login
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-            </NavLink>
-        </div>
-    </nav>
-</div>
+        <ul class="nav navbar-nav navbar-right">
+            <li>
+                <AuthorizeView>
+                    <Authorized>
+                        <button class="btn btn-danger" @onclick="Logout">Logout</button>
+                    </Authorized>
+                    <NotAuthorized>
+                        <NavLink class="nav-link" href="login">
+                            <button class="btn btn-primary">Login</button>
+                        </NavLink>
+                    </NotAuthorized>
+                </AuthorizeView>
+            </li>
+        </ul>
+    </div>
+</nav>
+
 
 @code {
-    private bool collapseNavMenu = true;
-
-    private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
-
-    private void ToggleNavMenu()
+    private async void Logout()
     {
-        collapseNavMenu = !collapseNavMenu;
+        await localStorage.RemoveItemAsync("jwt_token");
+        navigationManager.NavigateTo("/login", true);
     }
 }
