--- a/BSPracaInzynierska/Client/Shared/NavMenu.razor
+++ b/BSPracaInzynierska/Client/Shared/NavMenu.razor
@@ -9,7 +9,7 @@
         <div class="navbar-header">    
             <ul class="nav navbar-nav">
                 <li>
-                    <NavLink class="nav-link" href="register">
+                    <NavLink class="nav-link" href="mainpage">
                         <a class="navbar-brand">Guess that Melody?</a>
                     </NavLink>
                 </li>
