--- a/BSPracaInzynierska/Client/_Imports.razor
+++ b/BSPracaInzynierska/Client/_Imports.razor
@@ -9,6 +9,8 @@
 @using BSPracaInzynierska.Client
 @using BSPracaInzynierska.Client.Services
 @using BSPracaInzynierska.Client.Services.PlaylistService
+@using BSPracaInzynierska.Client.Services.GameOneServices
+@using BSPracaInzynierska.Client.Services.GameCreatorService
 @using BSPracaInzynierska.Client.Shared
 @using BSPracaInzynierska.Shared
 @using Microsoft.AspNetCore.Components.Authorization
