--- a/BSPracaInzynierska/Client/Pages/MainPage.razor
+++ b/BSPracaInzynierska/Client/Pages/MainPage.razor
@@ -4,20 +4,26 @@
 
 <h3>Choose your Playlist</h3>
 
-
-@foreach (var playlist in mainService.playlists)
-{
-    <div class="card" style="margin:auto; width: 20rem; text-align:center;display:inline-block;">
-        <img class="card-img-top" src="@playlist.Songs.FirstOrDefault().Picture" alt="Card image cap">
-        <div class="card-body">
-            <h5 class="card-title">@playlist.PlaylistName</h5>
-            <h6 class="card-subtitle mb-2 text-muted">jakis text</h6>
-            <p class="card-text">@playlist.Description</p>
-            <button class="btn btn-danger" @onclick="() => DeletePlaylist(playlist.Id)" type="button">Delete</button>
-            <button class="btn btn-danger" @onclick="() => PlayGameOne(playlist.Id)" type="button">Play</button>
+<div class="container" style="display: flex; flex-wrap: wrap; gap: 10px;">
+    @foreach (var playlist in mainService.playlists)
+    {
+        <div class="card" style="margin:auto; width: 15rem;">
+            <img class="card-img-top" src="@playlist.Songs.FirstOrDefault().Picture" alt="Card image cap">
+            <div class="card-body">
+                <h4 class="card-title">@playlist.PlaylistName</h4>
+                <p class="card-text">
+                    Number of Tracks: @playlist.Songs.Count()
+                    <br/>
+                    Created by: @playlist.Creator.Username
+                    </p>
+                <button class="btn btn-danger" @onclick="() => DeletePlaylist(playlist.Id)" type="button">Delete</button>
+                <button class="btn btn-warning" @onclick="() => EditPlaylist(playlist.Id)" type="button">Edit</button>
+                <button class="btn btn-success" @onclick="() => PlayGameOne(playlist.Id)" type="button">Play</button>
+            </div>
         </div>
-    </div>
-}
+    }
+</div>
+
 
 
 
@@ -36,6 +42,10 @@
     public void PlayGameOne(Guid id)
     {
         navigationManager.NavigateTo($"gameTypeOne/{id.ToString()}");
+    }
+    public void EditPlaylist(Guid id)
+    {
+        navigationManager.NavigateTo($"editPlaylist/{id.ToString()}");
     }
 
 }
