--- a/BSPracaInzynierska/Client/Pages/MainPage.razor
+++ b/BSPracaInzynierska/Client/Pages/MainPage.razor
@@ -41,7 +41,7 @@
     }
     public void PlayGameOne(Guid id)
     {
-        navigationManager.NavigateTo($"gameTypeOne/{id.ToString()}");
+        navigationManager.NavigateTo($"gameCreator/{id.ToString()}");
     }
     public void EditPlaylist(Guid id)
     {
