--- a/BSPracaInzynierska/Client/_Imports.razor
+++ b/BSPracaInzynierska/Client/_Imports.razor
@@ -10,6 +10,7 @@
 @using BSPracaInzynierska.Client.Services
 @using BSPracaInzynierska.Client.Services.PlaylistService
 @using BSPracaInzynierska.Client.Services.GameOneServices
+@using BSPracaInzynierska.Client.Services.BlindGuessGameService
 @using BSPracaInzynierska.Client.Services.GameCreatorService
 @using BSPracaInzynierska.Client.Shared
 @using BSPracaInzynierska.Shared
